module(
  name = "pico_calibration_tool",
  version = "0.1.1",
)

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
bazel_dep(name = "opencv", version = "4.11.0.bcr.1")
load("@bazel//tools/build_defs/repo:local.bzl", "new_local_repository")

git_override(
  module_name = "hedron_compile_commands",
  remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
  commit = "4f28899228fb3ad0126897876f147ca15026151e",
)

local_repository(
  name = "realsense",
  path = "/usr/include/librealsense2/",
  build_file = "//third_party/realsense"
)

local_repository(
  name = "opencv",
  path = "/opt/picoscan_tool/opencv/opencv4/",
  build_file = "//third_party/opencv/",
)
