module(
  name = "pico_calibration_tool",
  version = "0.1.1",
)

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
bazel_dep(name = "eigen", version = "4.0.0-20241125.bcr.2")
#bazel_dep(name = "opencv", version = "4.11.0.bcr.1")

git_override(
  module_name = "hedron_compile_commands",
  remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
  commit = "4f28899228fb3ad0126897876f147ca15026151e",
)
new_local_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:local.bzl", "new_local_repository")

new_local_repository(
  name = "realsense",
  path = "/usr/include",
  build_file = "//third_party/realsense:BUILD.bazel"
)

new_local_repository(
  name = "opencv",
  path = "/opt/picoscan_tool/sysroot/opencv",
  build_file = "//third_party/opencv:BUILD.bazel",
)
